syntax = "proto3";

option go_package = "/messaging";

message HabCommand {
    string description = 1;
    HTTPRequest request = 2;
    enum CommandType {
        UNKNOWN = 0;
        LIST_THINGS = 1;
        CREATE_ITEM_BATTERY_LEVEL = 2;
        LIST_ITEMS = 3;
    }
    CommandType command_type = 3;
}

message HTTPRequest {
    string method = 1;
    string path = 2;
    bytes body = 3;
}

message OnPremHabCommandResponse {
    string description = 1;
    HabCommand hab_command = 2;
    bytes response = 3;
}

message OnPremError {
    string error_message = 1;
}
